--- a/Atividade Avaliativa - Anselmo/index.html
+++ b/Atividade Avaliativa - Anselmo/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Atividade Avaliativa - Anselmo</title>
-
-    <link rel="stylesheet" type="text/css" href="../Atividade Avaliativa - Anselmo/imagem/etec.jpg.jpg" media="screen" />
-    <link rel="stylesheet" href="../Atividade Avaliativa - Anselmo/css/estilo.css">
+    <title>Atividade Avaliativa - Anselmo</title>
+    <link rel="stylesheet" href="./css/estilo.css">
 
 </head>
     <header>
